--- a/tercer_entrega/tp4/Vista/css/styles.css
+++ b/tercer_entrega/tp4/Vista/css/styles.css
@@ -51,6 +51,21 @@ input[type="submit"] {
     cursor: pointer;
 }
 
+.tabla-personas {
+    width: 80%;
+    margin: 0 auto;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+  }
+
+  .tabla-personas th, .tabla-personas td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+  }
+  
+
+
 input[type="submit"]:hover {
     background-color: #0056b3;
 }
